# tuda_workspace_scripts

./: .gitignore  CMakeLists.txt  README.md  config.yaml  package.xml
docker/cross_compile/: Dockerfile  cross_compile
env_hooks/: 20.command.bash.in  30.discovery_server.bash  30.init.bash  80.init.bash  command.bash.in  setup.dsv.in
scripts/: _clean.py  _discovery.py  build.py  build_clean.py  cd.sh  clean.sh  config.py  cross_compile.py  discovery.sh  init.py  robots.py  status.py  test.py  wtf.py
scripts/autocompletion/: cd.bash  clean.bash  discovery.bash
scripts/helpers/: __init__.py  get_package_names_in_workspace.py  get_package_path.py  output.py  output.sh  remove_packages_from_env.py  workspace.py  workspace.sh
scripts/hooks/wtf/: 10.check_for_unclean_links.py  20.kill_zombies.py  90.ros2_daemon_restart.py
templates/: colcon_defaults.yaml
tuda_workspace_scripts/: __init__.py  build.py  completion.py  config.py  discovery.py  print.py  robots.py  scripts.py  tmux.py  workspace.py
